# tinyrenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
parser/: CMakeLists.txt  parser.cpp  parser.h
